feat: add ExamRepository to ViewDonationDetailsService